fix content overlapping

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@
     right: 0;
     left: 0;
     width: 100%;
+    background-color: $white;
 
     &__container {
         margin: 0 20px;
